# Expire-Folder

./: .gitignore  Cargo.toml  README.md
.cargo/: config.toml
.github/workflows/: release.yml  test.yml
src/: cli.rs  main.rs
src/cli/: add.rs  list.rs  mod.rs
src/error/: mod.rs
src/file/: mod.rs  util.rs  writer.rs
