[package]
name = "exp"
version = "0.1.0"
authors = ["Gioele F. <gioele.fiorenza2000@gmail.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.0.29", features = ["derive"] }
serde = { version = "1.0.151", features = ["derive"] }
serde_json = "1.0"
chrono = "0.4.23"
dirs = "4.0.0"
colored = "2.0.0"

[dev-dependencies]
serial_test = "*"
